// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluralPairIfNeeded works when both counts exist 1`] = `
<p
  class="plural-pair-if-needed"
>
  2 running tasks, 1 pending task
</p>
`;

exports[`PluralPairIfNeeded works when no counts exist 1`] = `null`;

exports[`PluralPairIfNeeded works when only first count exists 1`] = `
<p
  class="plural-pair-if-needed"
>
  2 running tasks
</p>
`;

exports[`PluralPairIfNeeded works when only second count exists 1`] = `
<p
  class="plural-pair-if-needed"
>
  1 pending task
</p>
`;
